--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/alexpsam/fullstackproject#readme",
   "dependencies": {
+    "body": "^5.1.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "mustache": "^4.2.0",
+    "mustache-express": "^1.3.0",
+    "parser": "^0.1.4",
+    "pg-promise": "^10.10.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
