--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   "homepage": "https://github.com/alexpsam/fullstackproject#readme",
   "dependencies": {
     "body": "^5.1.0",
+    "cli": "^1.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.0",
+    "mysql2": "^2.2.5",
     "parser": "^0.1.4",
     "pg": "^8.6.0",
-    "pg-promise": "^10.10.2"
+    "pg-promise": "^10.10.2",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
